# substrait-cpp

src/substrait/textplan/: CMakeLists.txt
src/substrait/textplan/converter/: CMakeLists.txt  InitialPlanProtoVisitor.cpp
src/substrait/textplan/parser/: CMakeLists.txt
src/substrait/textplan/parser/grammar/: CMakeLists.txt
